deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: nginx
        image: 992057087595.dkr.ecr.ap-south-1.amazonaws.com/demo-app:latest
        ports:
        - containerPort: 80
