service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 80
